--- a/src/styles/ActionBar.css
+++ b/src/styles/ActionBar.css
@@ -37,13 +37,20 @@
 
 .action-bar {
   position: fixed;
-  bottom: 20px;
+  bottom: 0;
   left: 0;
   width: 100%;
-  height: 60px;
-  display: flex;
-  justify-content: space-around;
+  display: flex;         
+  justify-content: center; 
+  align-items: stretch;
+  gap: 15px;            
+  background-color: rgba(42, 42, 58, 0.2); 
+  border-top: 3px solid rgba(74, 74, 90, 0.5); 
+  /* background-color:transparent;  */
+  /* border-top: 0px solid #4a4a5a; */
+  padding: 8px 15px;
   z-index: 1000;
+  box-shadow: 0 -3px 6px rgba(0, 0, 0, 0.3);
 }
 
 .action-item {
